@@ -18,4 +18,5 @@ MM/DD/YY @ HH:MM - Description of change - (Initials)
 02/09/16 @ 14:00 - Created MY_Controller inside core folder - (CS)
 
 02/09/16 @ 14:00 - Created Collections model - (CS)
-02/11/16 @ 12:13 - Database.php phpmyadmin config, autoload.php libraries
+02/11/16 @ 14:13 - Database.php phpmyadmin config, autoload.php libraries (KLW)
+02/11/16 @ 14:39 - GIT ignored personal database.php... (KLW)
